# EMSGC

./: .gitignore  CMakeLists.txt  README.md  dependencies.yaml  emsgc_main.cpp  package.xml
calib/DistSurf/: calib.yaml
calib/EED/: calib.yaml
calib/EV_IMO/: calib.yaml
calib/hkust_EMS/cast/: calib.yaml
calib/hkust_EMS/corridor/: calib.yaml
cfg/DistSurf/: car.yaml  hand.yaml
cfg/EED/: fast_drone.yaml  light_variations.yaml  occlusions.yaml  what_is_background.yaml
cfg/evimo/box/: seq00.yaml
cfg/evimo/table/: seq01.yaml
cfg/hkust_EMS/: cast.yaml  corridor.yaml
include/emsgc/container/: EventMRF.h  EventQueueMat.h  PerspectiveCamera.h
include/emsgc/core/: contrastFunctor.h  event_motion_segmentation.h  image_warped_events.h  numerical_deriv.h
include/emsgc/tools/: TicToc.h  utils.h  visualizer.h
launch/: .gitignore
launch/DistSurf/: car.launch  hand.launch
launch/EED/: fast_drone.launch  light_variations.launch  occlusions.launch  what_is_background.launch
launch/EV-IMO/: box_seq00.launch  table_seq01.launch
launch/hkust_EMS/: cast.launch  corridor.launch
result/DistSurf/car/seg_labels/: 0.txt  0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
result/DistSurf/hand/seg_labels/: 0.txt  0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
result/EED/fast_drone/seg_labels/: 0.txt  0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
result/EED/light_variations/seg_labels/: 0.txt  0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
result/EED/occlusions/seg_labels/: 0.txt  0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
result/EED/what_is_background/seg_labels/: 0.txt  0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  1.txt  (+9 more)
script/: launch_all_seq.sh
src/container/: PerspectiveCamera.cpp
src/core/: event_motion_segmentation.cpp  image_warped_events.cpp  numerical_deriv.cpp  optim_contrast_gsl.cpp  optim_labels.cpp  optim_models.cpp  optimizeLabels.cpp  optimizeModels.cpp
(+91 files in other folders)
